--- a/src/main/resources/app/src/index.html
+++ b/src/main/resources/app/src/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>App</title>
-  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+  <title>Archivit</title>
+  <base href="/">
+
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
+
 <body>
-  <app-root></app-root>
+  <app-root class="hold-transition sidebar-mini sidebar-open"></app-root>
 </body>
+
 </html>
