--- a/src/main/resources/app/src/index.html
+++ b/src/main/resources/app/src/index.html
@@ -1,19 +1,13 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-
-  <title>Archivit</title>
+  <title>App</title>
   <base href="/">
-
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-
 <body>
-  <app-root class="hold-transition sidebar-mini sidebar-open"></app-root>
+  <app-root></app-root>
 </body>
-
 </html>
